syntax = "proto3";

package fadovn_store;

message GetCityConditionRequest {
  optional int32 city_id = 1;
  optional string city_name = 2;
  optional string city_slug = 3;
  repeated int32 list_city_id = 4;
  repeated int32 list_state_id = 5;
  optional int32 state_id = 6;
  repeated int32 list_country_id = 7;
  optional int32 country_id = 8;

  optional int32 page = 99;
  optional int32 limit = 100;
}